# follow-the-crypto-backend

./: .env.example  .gitignore  DAILY_OPERATIONS.md  Database.py  LICENSE  PIPELINE.md  README.md  Storage.py  ads.py  candidate_expenditures.py  candidate_images.py  candidate_trim.py  committee_contributions.py  committee_details.py  committee_disbursements.py  committee_expenditures.py  company_spending.py  company_utils.py  config.py  daily.py  daily_pipeline.py  fetch_committee_contributions.py  get_candidate_images.py  get_missing_recipients.py  hourly_update.py  individuals.py  main.py  merge_races.py  outside_spending.py  pacs.py  pipeline.py  process_committee_contributions.py  process_committee_expenditures.py  process_company_and_individual_contributions.py  process_company_contributions.py  process_company_state_spending.py  process_individual_contributions.py  pyproject.toml  race_summary.py  races.py  (+7 more)
commands/: README.md  __init__.py  add_committee.py  add_company.py  add_individual.py  batch_daily.py  example_usage.py  fetch_individual.py  find_duplicate_candidates.py  list_committees.py  list_companies.py  list_individuals.py
pipeline_core/: __init__.py  context.py  orchestrator.py  registry.py  state.py  task.py
scripts/: find_committee_donor.py  primaries.py
tasks/: __init__.py  ads_task.py  candidates.py  committees.py  companies.py  company_dependencies.py  contributions.py  daily_operations.py  disbursements.py  expenditures.py  individuals.py  individuals_selective.py  pacs.py  recipients.py
