[tool.poetry]
name = "follow-the-crypto-backend"
version = "0.1.0"
description = ""
authors = ["Molly White <molly@mollywhite.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.1"
firebase-admin = "^6.5.0"
google-cloud-logging = "^3.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
